--- a/Index.html
+++ b/Index.html
@@ -224,7 +224,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Impedit vitae, dolorum tenetur labore dolor, sit perferendis
                   officia a non placeat nihil! Praesentium amet perspiciatis
-                  animi iste enim ullam aliquid soluta.
+                  animi iste enim ullam aliquid soluta
                 </p>
               </div>
             </div>
